# python-template

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: changelog_verifier.yml  checks.yml  dependabot_pr.yml  links.yml  lint_pr_title.yml  publish.yml
greeter/: __init__.py  __main__.py
tests/: test_greeter.py
